移除了oauth 增加rsa加密 增加登录

--- a/easy-facade/src/main/resources/application.yml
+++ b/easy-facade/src/main/resources/application.yml
@@ -58,7 +58,9 @@ knife4j:
 # 白名单
 whitelist:
   ignoreUrl:
+    - /doc.html
+    - /webjars/**
     - /test/**
     - /user/register
-    - /oauth/**
+    - /login
     - /druid/**
