--- a/easy-facade/src/main/resources/application.yml
+++ b/easy-facade/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   port: 8080
   servlet:
     context-path: /
+
 # 加密参数配置 password不建议设置在这里面,建议打包手动输入另行保存
 jasypt:
   encryptor:
@@ -11,19 +12,69 @@ jasypt:
 spring:
   main:
     allow-circular-references: true
+  # 配置文件
   profiles:
     active: dev
   mvc:
     pathmatch:
       matching-strategy: ant-path-matcher
+
+  # 应用名称
   application:
     name: free-springboot
+
   # 文件上传配置
   servlet:
     multipart:
       max-file-size: 1024MB
       enabled: true
       max-request-size: 1024MB
+
+  # 数据链接配置
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      driverClassName: com.mysql.cj.jdbc.Driver
+      # 初始连接数
+      initialSize: 5
+      # 最小连接池数量
+      minIdle: 10
+      # 最大连接池数量
+      maxActive: 20
+      # 配置获取连接等待超时的时间
+      maxWait: 60000
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      timeBetweenEvictionRunsMillis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      minEvictableIdleTimeMillis: 300000
+      # 配置一个连接在池中最大生存的时间，单位是毫秒
+      maxEvictableIdleTimeMillis: 900000
+      # 配置检测连接是否有效
+      validationQuery: SELECT 1 FROM DUAL
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      webStatFilter:
+        enabled: true
+      statViewServlet:
+        enabled: true
+        # 设置白名单，不填则允许所有访问
+        allow:
+        url-pattern: /druid/*
+        # 控制台管理用户名和密码
+        login-username: admin
+        login-password: 123456
+      filter:
+        stat:
+          enabled: true
+          # 慢SQL记录
+          log-slow-sql: true
+          slow-sql-millis: 1000
+          merge-sql: true
+        wall:
+          config:
+            multi-statement-allow: true
+
 # Mybatis Plus配置
 mybatis-plus:
   typeAliasesPackage: com.free
@@ -42,7 +93,7 @@ mybatis-plus:
     call-setters-on-nulls: true
   global-config:
     db-config:
-      #主键类型 雪花算法
+      #主键类型
       id-type: AUTO
     #关闭banner
     banner: false
