--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <spring-boot-maven-plugin.version>2.1.1.RELEASE</spring-boot-maven-plugin.version>
+        <spring-boot-maven-plugin.version>2.6.3</spring-boot-maven-plugin.version>
 
         <spring.boot.version>2.6.3</spring.boot.version>
         <mysql.version>8.0.29</mysql.version>
